--- a/MVCApp/Content/Site.css
+++ b/MVCApp/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: rgba(255, 106, 0, 0.20);
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,13 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.center {
+    margin: auto;
+    width: 100px;
+}
+
+input.center {
+    margin-left: calc(50% - 50px);
 }
